--- a/src/components/fleet/fleet-content/FleetContent.css
+++ b/src/components/fleet/fleet-content/FleetContent.css
@@ -1,8 +1,16 @@
 .fleet-content {
     height: 443px;
-    border: 1px solid white;
     position: absolute;
     top: 261px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.fleet-content2 {
+    height: 443px;
+    position: absolute;
+    top: 1083px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -13,8 +21,469 @@
     height: 100%;
     width: 443px;
     border: 2px solid #FFFFFF;
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay{
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 443px;
+    background-color: rgba(255, 255, 255, 0.051);
+    z-index: 999;
+}
+
+.fleet-img img:nth-child(1) {
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    /* transition: transform .5s ease; */
+}
+
+.fleet-img img:nth-child(2) {
+    height: 207px;
+    width: 437px;
+    position: absolute;
+    object-fit: cover;
+    left: 0;
+    top: 128px;
+    /* transition: transform .5s ease; */
+}
+
+/* .fleet-img img:hover{
+    transform: scale(1.05);
+} */
+
+.top-stroke {
+    position: absolute;
+    height: 13px;
+    top: 0;
+    left: 50%;
+    background-color: white;
+    width: 0;
+    border: 1px solid white;
+}
+
+.top-left-stroke {
+    position: absolute;
+    height: 13px;
+    left: 65px;
+    top: 65px;
+    background-color: white;
+    width: 0;
+    border: 1px solid white;
+    transform: rotate(-225deg);
+}
+
+.top-right-stroke {
+    position: absolute;
+    height: 13px;
+    right: 65px;
+    top: 65px;
+    background-color: white;
+    width: 0;
+    border: 1px solid white;
+    transform: rotate(-135deg);
+}
+
+.bottom-left-stroke {
+    position: absolute;
+    height: 13px;
+    left: 65px;
+    bottom: 65px;
+    background-color: white;
+    width: 0;
+    border: 1px solid white;
+    transform: rotate(-135deg);
+}
+
+.bottom-right-stroke {
+    position: absolute;
+    height: 13px;
+    right: 65px;
+    bottom: 65px;
+    background-color: white;
+    width: 0;
+    border: 1px solid white;
+    transform: rotate(-225deg);
+}
+
+.bottom-stroke {
+    position: absolute;
+    height: 13px;
+    left: 50%;
+    bottom: 0;
+    background-color: white;
+    width: 0;
+    border: 1px solid white;
+}
+
+.left-stroke {
+    position: absolute;
+    height: 13px;
+    top: 50%;
+    left: 6px;
+    background-color: white;
+    width: 0;
+    border: 1px solid white;
+    transform: rotate(90deg);
+}
+
+.right-stroke {
+    position: absolute;
+    height: 13px;
+    top: 50%;
+    right: 6px;
+    background-color: white;
+    width: 0;
+    border: 1px solid white;
+    transform: rotate(90deg);
 }
 
 .fleet-img:nth-child(n+2) {
     margin-left: 56px;
+}
+
+.fleet-card {
+    position: absolute;
+    top: 746px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.fleet-card2 {
+    position: absolute;
+    top: 1568px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.fleet-context {
+    width: 443px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    line-height: 1.2;
+}
+
+.fleet-context:nth-child(n+2) {
+    margin-left: 56px;
+}
+
+.second-p {
+    margin-top: 32px;
+    margin-left: 18px;
+    line-height: 1.4;
+}
+
+.second-p p:nth-child(2) {
+    margin-top: 6px;
+}
+
+.blue-line {
+    position: absolute;
+    left: 90px;
+    top: 12px;
+    height: 209px;
+    background-color: #0A505F;
+    width: 1px;
+}
+
+.circle-top{
+    position: absolute;
+    left: -4px;
+    top: -5px;
+    height: 9px;
+    width: 9px;
+    border-radius: 50%;
+    background-color: #0A505F;
+}
+
+.circle-mid{
+    position: absolute;
+    left: -4px;
+    top: 65px;
+    height: 9px;
+    width: 9px;
+    border-radius: 50%;
+    background-color: #0A505F;
+}
+
+.circle-bottom{
+    position: absolute;
+    left: -4px;
+    bottom: -5px;
+    height: 9px;
+    width: 9px;
+    border-radius: 50%;
+    background-color: #0A505F;
+}
+
+.fleetHeight {
+    height: 100vh;
+    margin-bottom: 126px;
+}
+
+@media (min-width: 1366px) {
+    .fleet-content {
+        height: 346px;
+        top: 204px;
+    }
+    
+    .fleet-content2 {
+        height: 346px;
+        top: 846px;
+    }
+    
+    .fleet-img {
+        width: 346px;
+    }
+    
+    .overlay{
+        width: 346px;
+    }
+    
+    .fleet-img img:nth-child(2) {
+        height: 162px;
+        width: 341px;
+        top: 100px;
+    }
+    
+    .top-stroke {
+        height: 9px;
+    }
+    
+    .top-left-stroke {
+        height: 9px;
+        left: 51px;
+        top: 51px;
+    }
+    
+    .top-right-stroke {
+        height: 10px;
+        right: 51px;
+        top: 51px;
+    }
+    
+    .bottom-left-stroke {
+        height: 9px;
+        left: 51px;
+        bottom: 51px;
+    }
+    
+    .bottom-right-stroke {
+        height: 9px;
+        right: 51px;
+        bottom: 51px;
+    }
+    
+    .bottom-stroke {
+        height: 9px;
+    }
+    
+    .left-stroke {
+        height: 9px;
+        left: 5px;
+    }
+    
+    .right-stroke {
+        height: 9px;
+        right: 5px;
+    }
+    
+    .fleet-img:nth-child(n+2) {
+        margin-left: 44px;
+    }
+    
+    .fleet-card {
+        top: 583px;
+    }
+    
+    .fleet-card2 {
+        top: 1225px;
+    }
+    
+    .fleet-context {
+        width: 346px;
+    }
+    
+    .fleet-context:nth-child(n+2) {
+        margin-left: 44px;
+    }
+    
+    .second-p {
+        margin-top: 25px;
+        margin-left: 14px;
+    }
+    
+    .second-p p:nth-child(2) {
+        margin-top: 5px;
+    }
+    
+    .blue-line {
+        left: 70px;
+        top: 9px;
+        height: 163px;
+    }
+    
+    .circle-top{
+        left: -3px;
+        top: -4px;
+        height: 6px;
+        width: 6px;
+    }
+    
+    .circle-mid{
+        left: -3px;
+        top: 53px;
+        height: 6px;
+        width: 6px;
+    }
+    
+    .circle-bottom{
+        left: -3px;
+        bottom: -3px;
+        height: 6px;
+        width: 6px;
+    }
+    
+    .explore-marg {
+        height: 782px;
+    }
+}
+
+@media (min-width: 1920px) {
+    .fleet-content {
+        height: 443px;
+        top: 261px;
+    }
+    
+    .fleet-content2 {
+        height: 443px;
+        top: 1083px;
+    }
+    
+    .fleet-img {
+        width: 443px;
+    }
+    
+    .overlay{
+        width: 443px;
+    }
+    
+    .fleet-img img:nth-child(2) {
+        height: 207px;
+        width: 437px;
+        top: 128px;
+    }
+    
+    .top-stroke {
+        height: 13px;
+    }
+    
+    .top-left-stroke {
+        height: 13px;
+        left: 65px;
+        top: 65px;
+    }
+    
+    .top-right-stroke {
+        height: 13px;
+        right: 65px;
+        top: 65px;
+    }
+    
+    .bottom-left-stroke {
+        height: 13px;
+        left: 65px;
+        bottom: 65px;
+    }
+    
+    .bottom-right-stroke {
+        height: 13px;
+        right: 65px;
+        bottom: 65px;
+    }
+    
+    .bottom-stroke {
+        height: 13px;
+    }
+    
+    .left-stroke {
+        height: 13px;
+        left: 6px;
+    }
+    
+    .right-stroke {
+        height: 13px;
+        right: 6px;
+    }
+    
+    .fleet-img:nth-child(n+2) {
+        margin-left: 56px;
+    }
+    
+    .fleet-card {
+        top: 746px;
+    }
+    
+    .fleet-card2 {
+        top: 1568px;
+    }
+    
+    .fleet-context {
+        width: 443px;
+    }
+    
+    .fleet-context:nth-child(n+2) {
+        margin-left: 56px;
+    }
+    
+    .second-p {
+        margin-top: 32px;
+        margin-left: 18px;
+    }
+    
+    .second-p p:nth-child(2) {
+        margin-top: 6px;
+    }
+    
+    .blue-line {
+        left: 90px;
+        top: 12px;
+        height: 209px;
+    }
+    
+    .circle-top{
+        left: -4px;
+        top: -5px;
+        height: 9px;
+        width: 9px;
+    }
+    
+    .circle-mid{
+        left: -4px;
+        top: 65px;
+        height: 9px;
+        width: 9px;
+    }
+    
+    .circle-bottom{
+        left: -4px;
+        bottom: -5px;
+        height: 9px;
+        width: 9px;
+    }  
+
+    .explore-marg {
+        height: 80vh;
+        margin-bottom: 126px;
+    }
 }
