--- a/src/components/about/about-search/AboutSearch.css
+++ b/src/components/about/about-search/AboutSearch.css
@@ -1,15 +1,15 @@
 .about-search {
-    width: 221px !important;
-    height: 39px;
+    width: 12.664vw !important;
+    height: 2.196vw;
+    border-radius: 1.317vw;
+    right: 7.320vw;
+    margin-top: 1.683vw;
     border: 1px solid rgba(255,255,255,0.502);
-    border-radius: 23px;
     background-color: rgba(255,255,255,0.2);
     display: flex;
     flex-direction: row;
-    right: 128px;
     align-items: center;
     position: absolute;
-    margin-top: 30px;
 }
 
 
@@ -23,38 +23,6 @@
 
 .search-icon {
     color: white;
-    font-size: 20px;
-    padding-left: 10px;
-}
-
-
-@media (min-width: 1366px) {
-    .about-search {
-        width: 173px !important;
-        height: 30px;
-        border-radius: 18px;
-        right: 100px;
-        margin-top: 23px;
-    }
-    
-    .search-icon {
-        font-size: 16px;
-        padding-left: 8px;
-    }    
-}
-
-@media (min-width: 1920px) {
-    .about-search {
-        width: 221px !important;
-        height: 39px;
-        border-radius: 23px;
-        right: 128px;
-        margin-top: 30px;
-    }
-    
-    .search-icon {
-        font-size: 20px;
-        padding-left: 10px;
-    }
-    
+    font-size: 1.171vw;
+    padding-left: 0.585vw;
 }
