--- a/src/components/home/banner/Banner.css
+++ b/src/components/home/banner/Banner.css
@@ -1,17 +1,17 @@
 .banner-container{
-    height: 575px;
+    height: 32.9vw;
+    border-radius: 0 0 0 28.6vw;
     width: 100%;
     background-image: url(../../../assets/Photos/home-banner.png);
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 0 0 0 500px;
 }
 
 .logos{
-    padding-top: 96px;
-    margin-left: 86px;
-    height: 80px;
-    width: 81px;
+    padding-top: 5.5vw;
+    margin-left: 4.9vw;
+    height: 4.6vw;
+    width: 4.6vw;
     display: flex;
 }
 
@@ -21,204 +21,24 @@
 }
 
 img:nth-child(n+2){
-    margin-left: 7px;
+    margin-left: 0.4vw;
 }
 
 .title{
     color: white;
-    margin-top: 72px;
     text-align: right;
-    margin-right: 114px;
-    font-size: 49px;
+    margin-top: 4vw;
+    margin-right: 6.5vw;
+    font-size: 2.8vw;
     text-transform: uppercase;
 }
 
 .subtitle{
     color: white;
-    margin-top: 5px;
     text-align: right;
-    margin-right: 119px;
-    font-size: 26px;
+    margin-top: 0.3vw;
+    margin-right: 6.8vw;
+    font-size: 1.5vw;
     /* font-style: italic; */
 }
 
-/* @media (max-width: 1680px) {
-    .banner-container{
-        height: 563px;
-        border-radius: 0 0 0 525px;
-    }
-    
-    .logos{
-        padding-top: 105px;
-        margin-left: 101px;
-        height: 78px;
-        width: 78px;
-    }
-
-    img:nth-child(n+2){
-        margin-left: 5px;
-    }
-    
-    .title{
-        margin-top: 63px;
-        margin-right: 109px;
-        font-size: 48px;
-    }
-    
-    .subtitle{
-        margin-top: 4px;
-        margin-right: 109px;
-        font-size: 25px;
-    }
-}
-
-@media (max-width: 1680px) {
-    .banner-container{
-        height: 563px;
-        border-radius: 0 0 0 525px;
-    }
-    
-    .logos{
-        padding-top: 105px;
-        margin-left: 101px;
-        height: 78px;
-        width: 78px;
-    }
-
-    img:nth-child(n+2){
-        margin-left: 6px;
-    }
-    
-    .title{
-        margin-top: 63px;
-        margin-right: 109px;
-        font-size: 48px;
-    }
-    
-    .subtitle{
-        margin-top: 4px;
-        margin-right: 109px;
-        font-size: 25px;
-    }
-}
-
-@media (max-width: 1536px) {
-    .banner-container{
-        height: 515px;
-        border-radius: 0 0 0 480px;
-    }
-    
-    .logos{
-        padding-top: 96px;
-        margin-left: 92px;
-        height: 71px;
-        width: 71px;
-    }
-
-    img:nth-child(n+2){
-        margin-left: 5px;
-    }
-    
-    .title{
-        margin-top: 58px;
-        margin-right: 100px;
-        font-size: 44px;
-    }
-    
-    .subtitle{
-        margin-top: 4px;
-        margin-right: 100px;
-        font-size: 23px;
-    }
-}
-
-@media (max-width: 1440px) {
-    .banner-container{
-        height: 483px;
-        border-radius: 0 0 0 450px;
-    }
-    
-    .logos{
-        padding-top: 90px;
-        margin-left: 86px;
-        height: 67px;
-        width: 67px;
-    }
-
-    img:nth-child(n+2){
-        margin-left: 5px;
-    }
-    
-    .title{
-        margin-top: 54px;
-        margin-right: 94px;
-        font-size: 41px;
-    }
-    
-    .subtitle{
-        margin-top: 4px;
-        margin-right: 94px;
-        font-size: 22px;
-    }
-} */
-
-@media (min-width: 1366px) {
-    .banner-container{
-        height: 449px;
-        border-radius: 0 0 0 391px;
-    }
-    
-    .logos{
-        padding-top: 75px;
-        margin-left: 67px;
-        height: 63px;
-        width: 63px;
-    }
-    
-    img:nth-child(n+2){
-        margin-left: 5px;
-    }
-    
-    .title{
-        margin-top: 56px;
-        margin-right: 89px;
-        font-size: 38px;
-    }
-    
-    .subtitle{
-        margin-top: 4px;
-        margin-right: 93px;
-        font-size: 20px;
-        /* font-style: italic; */
-    }
-}
-
-@media (min-width: 1920px) {
-    .banner-container{
-        height: 575px;
-        border-radius: 0 0 0 500px;
-    }
-    
-    .logos{
-        padding-top: 96px;
-        margin-left: 86px;
-        height: 80px;
-        width: 81px;
-    }
-    
-    img:nth-child(n+2){
-        margin-left: 7px;
-    }
-    
-    .title{
-        margin-top: 72px;
-        margin-right: 114px;
-        font-size: 49px;
-    }
-    
-    .subtitle{
-        margin-top: 5px;
-        margin-right: 119px;
-        font-size: 26px;
-    }
-}
