--- a/src/components/home/homeContent/home-content-RVphotos/HomeContentRVphotos.css
+++ b/src/components/home/homeContent/home-content-RVphotos/HomeContentRVphotos.css
@@ -1,8 +1,8 @@
 .RVphotos-container{
-    margin-left: 525px;
-    margin-right: 80px;
-    width: 900px;
-    top: 470px;
+    margin-left: 30vw;
+    margin-right: 4.6vw;
+    width: 50vw;
+    top: 26.9vw;
     position: absolute;
     display: flex;
     flex-direction: row;
@@ -10,8 +10,8 @@
 }
 .img-overflow{
     border-radius: 50%;
-    height: 269px;
-    width: 269px;
+    height: 15.4vw;
+    width: 15.4vw;
     overflow: hidden;
 }
 
@@ -39,120 +39,11 @@
 }
 
 .img-subcontent{
-    margin-top: 30px;
+    margin-top: 1.7vw;
 }
 
 .RVphotos-container p:nth-child(3){
-    margin-top: 2px;
-}
-
-/* @media (max-width: 1680px) {
-    .RVphotos-container{
-        margin-left: 525px;
-        margin-right: 70px;
-        width: 865px;
-        top: 480px;
-    }
-    
-    .img-overflow{
-        height: 264px;
-        width: 264px;
-    }
-    
-    .img-subcontent{
-        margin-top: 25px;
-    }
-    
-    .RVphotos-container p:nth-child(3){
-        margin-top: 4px;
-    }
-}
-
-@media (max-width: 1536px) {
-    .RVphotos-container{
-        margin-left: 480px;
-        margin-right: 64px;
-        width: 791px;
-        top: 439px;
-    }
-    
-    .img-overflow{
-        height: 241px;
-        width: 241px;
-    }
-    
-    .img-subcontent{
-        margin-top: 23px;
-    }
-    
-    .RVphotos-container p:nth-child(3){
-        margin-top: 4px;
-    }
-}
-
-@media (max-width: 1440px) {
-    .RVphotos-container{
-        margin-left: 450px;
-        margin-right: 60px;
-        width: 742px;
-        top: 412px;
-    }
-    
-    .img-overflow{
-        height: 226px;
-        width: 226px;
-    }
-    
-    .img-subcontent{
-        margin-top: 22px;
-    }
-    
-    .RVphotos-container p:nth-child(3){
-        margin-top: 4px;
-    }
-} */
-
-
-@media (min-width: 1366px) {
-    .RVphotos-container{
-        margin-left: 410px;
-        margin-right: 63px;
-        width: 685px;
-        top: 367px;
-    }
-    .img-overflow{
-        height: 210px;
-        width: 210px;
-    }
-    
-    .img-subcontent{
-        margin-top: 23px;
-    }
-    
-    .RVphotos-container p:nth-child(3){
-        margin-top: 1px;
-    }
-}
-
-@media (min-width: 1920px) {
-    .RVphotos-container{
-        margin-left: 525px;
-        margin-right: 80px;
-        width: 900px;
-        top: 470px;
-    }
-    .img-overflow{
-        height: 269px;
-        width: 269px;
-    }
-    
-    .img-subcontent{
-        margin-top: 30px;
-    }
-    
-    .RVphotos-container p:nth-child(3){
-        margin-top: 2px;
-    }
+    margin-top: 0.07vw;
 }
 
 
