--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -6,7 +6,7 @@ body{
     z-index: 99999 !important;
     position: fixed;
     width: 100%;
-    height: 47px;
+    height: 2.708vw;
     left: 0px;
     top: 0px;
     background: rgba(255, 255, 255, .2) !important;
@@ -17,7 +17,7 @@ body{
 
 p{
     color: white;
-    font-size: 17px;
+    font-size: 0.951vw;
 }
 
 .nav-text1 {
@@ -26,32 +26,32 @@ p{
 
 .nav-text2 {
     position: absolute;
-    left: 210px;
+    left: 12.005vw;
 }
 
 .nav-text3 {
     position: absolute;
-    left: 338px;
+    left: 19.326vw;
 }
 
 .nav-text4 {
     position: absolute;
-    left: 495px;
+    left: 28.330vw;
 }
 
 .nav-text5 {
     position: absolute;
-    left: 665px;
+    left: 38.067vw;
 }
 
 .nav-text6 {
     position: absolute;
-    left: 819px;
+    left: 46.852vw;
 }
 
 .nav-text7 {
     position: absolute;
-    left: 966px;
+    left: 55.270vw;
 }
 
 .nav-text8 {
@@ -65,148 +65,13 @@ p{
 }
 
 .btn-nav{
-    height: 47px;
+    height: 2.708vw;
+    width: 72.913vw;
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
-    /* justify-content: space-between; */
-    width: 1275px;
     position: relative;
     /* margin-top: 1px; */
 }
 
-/* @media (max-width: 1680px) {
-    .nav {
-        height: 47px;
-    }
 
-    .btn-nav {
-        width: 1229px;
-        height: 47px;
-    }
-
-    p {
-        font-size: 18px;
-    }
-}
-
-@media (max-width: 1536px){
-    .nav {
-        height: 43px;
-    }
-
-    .btn-nav {
-        width: 1124px;
-        height: 43px;
-    }
-
-    p {
-        font-size: 16px;
-    }
-}
-
-@media (max-width: 1440px) {
-    .nav {
-        height: 40px;
-    }
-
-    .btn-nav {
-        width: 1054px;
-        height: 40px;
-    }
-
-    p {
-        font-size: 15px;
-    }
-} */
-
-@media (min-width: 1366px) {
-    .nav{
-        height: 37px;
-    }
-    
-    p{
-        font-size: 13px;
-    }
-    
-    .btn-nav{
-        height: 37px;
-        width: 996px;
-    }
-
-    .nav-text2 {
-        position: absolute;
-        left: 164px;
-    }
-    
-    .nav-text3 {
-        position: absolute;
-        left: 264px;
-    }
-    
-    .nav-text4 {
-        position: absolute;
-        left: 387px;
-    }
-    
-    .nav-text5 {
-        position: absolute;
-        left: 520px;
-    }
-    
-    .nav-text6 {
-        position: absolute;
-        left: 640px;
-    }
-    
-    .nav-text7 {
-        position: absolute;
-        left: 755px;
-    }
-}
-
-@media (min-width: 1920px) {
-    .nav{
-        height: 47px;
-    }
-    
-    p{
-        font-size: 17px;
-    }
-    
-    .btn-nav{
-        height: 47px;
-        width: 1275px;
-    }
-    
-    .nav-text2 {
-        position: absolute;
-        left: 210px;
-    }
-    
-    .nav-text3 {
-        position: absolute;
-        left: 338px;
-    }
-    
-    .nav-text4 {
-        position: absolute;
-        left: 495px;
-    }
-    
-    .nav-text5 {
-        position: absolute;
-        left: 665px;
-    }
-    
-    .nav-text6 {
-        position: absolute;
-        left: 819px;
-    }
-    
-    .nav-text7 {
-        position: absolute;
-        left: 966px;
-    }
-}
