--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -46,6 +46,10 @@
     padding-right: 2.635vw;
 }
 
+/* .fb {
+    padding-left: 0.4vw;
+} */
+
 .third-column div{
     margin-top: 1.610vw;
     line-height: 1.4;
